# fast_api_test

./: pyproject.toml
fast_api_demo/: api.py
